<resources>
    <string name="app_name">DemoLogin</string>
    <string name="press_again_to_exit">Press back again to exit.</string>
    <string name="login">Login</string>
    <string name="register">Need to Register?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="loading">Loading</string>
    <string name="name">Name</string>
    <string name="phoneno">Phone Number</string>
    <string name="register_now">Register Now</string>
    <string name="logout">Logout</string>
</resources>
